<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>hbnu.project</groupId>
        <artifactId>zhiyan-common</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>zhiyan-common-excel</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>zhiyan-common-excel</name>
    <description>zhiyan-common-excel</description>

    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>hbnu.project</groupId>
            <artifactId>zhiyan-common-basic</artifactId>
        </dependency>

        <dependency>
            <groupId>cn.idev.excel</groupId>
            <artifactId>fastexcel</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration><skip>true</skip></configuration>
            </plugin>


        </plugins>
    </build>

</project>
